--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.24.2",
+    "@supabase/supabase-js": "^2.44.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
